--- a/package.json
+++ b/package.json
@@ -77,14 +77,17 @@
     "css-modules-require-hook": "^4.0.1",
     "cssnano": "^3.7.0",
     "enzyme": "^2.3.0",
-    "eslint": "^2.11.1",
-    "eslint-config-airbnb": "^9.0.1",
+    "escope": "^3.6.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-ava": "^2.4.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.3.0",
+    "eslint-plugin-css-modules": "^2.7.5",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-react": "^7.7.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
