--- a/package.json
+++ b/package.json
@@ -34,14 +34,13 @@
     "activedirectory": "^0.7.2",
     "babel-core": "^6.9.1",
     "body-parser": "^1.15.1",
+    "bootstrap": "^3.3.7",
     "compression": "^1.6.2",
     "cross-env": "^1.0.8",
     "cuid": "^1.3.8",
     "express": "^4.13.4",
     "express-session": "^1.15.6",
     "flash": "^1.1.0",
-    "intl": "^1.2.4",
-    "intl-locales-supported": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "limax": "^1.3.0",
     "mongoose": "^4.4.20",
@@ -49,9 +48,9 @@
     "passport": "^0.4.0",
     "prop-types": "^15.6.1",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
-    "react-intl": "^2.1.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "redux": "^3.5.2",
